# hello-nix-uv-py

./: .gitignore  README.md  flake.nix  hello-nix-uv-py-deployment-hello-nix-uv-py.yaml  hello-nix-uv-py-service-hello-nix-uv-py.yaml  pyproject.toml  result  treefmt.nix
.github/workflows/: ci.yaml
k8s/base/: deployment.yaml  kustomization.yaml  service.yaml
kargo/: kustomization.yaml  project.yaml  promotiontask.yaml  stages.yaml  warehouse.yaml
