[build-system]
requires = ["hatchling", "editables"]
build-backend = "hatchling.build"
[project]
name = "hello"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.136.0"
]
[tool.fastapi]
entrypoint = "hello.main:app"

[dependency-groups]
dev = [
    "mypy>=1.20.1",
]
